[project]
name = "venusc-ast"
description = "Venus abstract syntax tree"
version = "0.1.0"
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
    "venusc-token @ file:./venusc/venusc_token/",
    "venusc-type @ file:./venusc/venusc_type/",
    "attrs>=24.2,<25.0",
]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Qexat"
email = "contact@qexat.com"
