[project]
name = "venusc-error"
description = "Venus' compiler error tree"
version = "0.1.0"
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
    "venusc-ast @ file:./venusc/venusc_ast/",
    "venusc-token @ file:./venusc/venusc_token/",
    "attrs>=24.2,<25.0",
]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Qexat"
email = "contact@qexat.com"
