[project]
name = "venusc-lexer"
description = "Venus lexer"
version = "0.1.0"
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
    "venusc-error @ file:./venusc/venusc_error/",
    "venusc-token @ file:./venusc/venusc_token/",
    "result>=0.17,<0.18",
]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Qexat"
email = "contact@qexat.com"
